Створив шапку сайту

--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Шапка сайту -->
+    <header>
+      <nav>
+        <a href="">WebStudio</a>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+  </body>
 </html>
