Створив блок HERO
Створив секцію "банер"/блок "герой"

--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
         <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!-- Банер (блок "герой") -->
+    <section>
+      <h1>Ефективні рішення для<br />вашого бізнесу</h1>
+      <button>Замовити послугу</button>
+    </section>
   </body>
 </html>
