Вказав мову лого-посилання
Додав атрибут lang зі значенням en, до посилання на головну сторінку сайту, в шапці.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="" lang="en">WebStudio</a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
