--- a/index.html
+++ b/index.html
@@ -27,5 +27,27 @@
       <h1>Ефективні рішення для<br />вашого бізнесу</h1>
       <button>Замовити послугу</button>
     </section>
+    <!-- Переваги -->
+    <section>
+      <!-- <h2>Переваги</h2> -->
+      <ul>
+        <li>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        </li>
+        <li>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        </li>
+        <li>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
