Створив секцію "Чим ми займаємося"

--- a/index.html
+++ b/index.html
@@ -49,5 +49,16 @@
         </li>
       </ul>
     </section>
+    <!-- Напрямок роботи -->
+    <section>
+      <h2>Чим ми займаємося</h2>
+      <ul>
+        <li><img src="./images/doing-1.jpg" alt="Хтось пише код" /></li>
+        <li>
+          <img src="./images/doing-2.jpg" alt="Хтось звіряється з ескізом, тримаючи телефон" />
+        </li>
+        <li><img src="./images/doing-3.jpg" alt="Хтось тримає планшет обираючи колір" /></li>
+      </ul>
+    </section>
   </body>
 </html>
