--- a/index.html
+++ b/index.html
@@ -60,5 +60,31 @@
         <li><img src="./images/doing-3.jpg" alt="Хтось тримає планшет обираючи колір" /></li>
       </ul>
     </section>
+    <!-- Наша команда -->
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" />
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/team-2.jpg" alt="Ольга Рєпіна" />
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/team-3.jpg" alt="Микола Тарасов" />
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/team-4.jpg" alt="Михайло Єрмаков" />
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
