--- a/index.html
+++ b/index.html
@@ -86,5 +86,14 @@
         </li>
       </ul>
     </section>
+    <!-- Підвал -->
+    <footer>
+      <a href="" lang="en">WebStudio</a>
+      <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
