--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="" lang="en">WebStudio</a>
+        <a href="">WebStudio</a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
@@ -88,7 +88,7 @@
     </section>
     <!-- Підвал -->
     <footer>
-      <a href="" lang="en">WebStudio</a>
+      <a href="">WebStudio</a>
       <address>м. Київ, пр-т Лесі Українки, 26</address>
       <ul>
         <li><a href="mailto:info@example.com">info@example.com</a></li>
