Змінив контент коментаря на більш підхожий
Замінив коментар "Напрямок роботи" на відповідний до заголовку: "Чим ми займаємося"

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </li>
       </ul>
     </section>
-    <!-- Напрямок роботи -->
+    <!-- Чим ми займаємося -->
     <section>
       <h2>Чим ми займаємося</h2>
       <ul>
