Замінив коментар блока HERO
коментар Банер (блок "герой") замінив на "Ефективні рішення для вашого бізнесу"
відповідно до заголовку

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <!-- Банер (блок "герой") -->
+    <!-- Ефективні рішення для вашого бізнесу -->
     <section>
       <h1>Ефективні рішення для<br />вашого бізнесу</h1>
       <button>Замовити послугу</button>
