Створив тег main
Перемістив головний контент сторінки у тег main

--- a/index.html
+++ b/index.html
@@ -22,70 +22,73 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <!-- Ефективні рішення для вашого бізнесу -->
-    <section>
-      <h1>Ефективні рішення для<br />вашого бізнесу</h1>
-      <button>Замовити послугу</button>
-    </section>
-    <!-- Переваги -->
-    <section>
-      <!-- <h2>Переваги</h2> -->
-      <ul>
-        <li>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        </li>
-        <li>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        </li>
-        <li>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
-        <li>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </li>
-      </ul>
-    </section>
-    <!-- Чим ми займаємося -->
-    <section>
-      <h2>Чим ми займаємося</h2>
-      <ul>
-        <li><img src="./images/doing-1.jpg" alt="Хтось пише код" /></li>
-        <li>
-          <img src="./images/doing-2.jpg" alt="Хтось звіряється з ескізом, тримаючи телефон" />
-        </li>
-        <li><img src="./images/doing-3.jpg" alt="Хтось тримає планшет обираючи колір" /></li>
-      </ul>
-    </section>
-    <!-- Наша команда -->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" />
-          <h3>Ігор Дем'яненко</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/team-2.jpg" alt="Ольга Рєпіна" />
-          <h3>Ольга Рєпіна</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/team-3.jpg" alt="Микола Тарасов" />
-          <h3>Микола Тарасов</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/team-4.jpg" alt="Михайло Єрмаков" />
-          <h3>Михайло Єрмаков</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
+    <!-- Головний контент сторінки -->
+    <main>
+      <!-- Ефективні рішення для вашого бізнесу -->
+      <section>
+        <h1>Ефективні рішення для<br />вашого бізнесу</h1>
+        <button>Замовити послугу</button>
+      </section>
+      <!-- Переваги -->
+      <section>
+        <!-- <h2>Переваги</h2> -->
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Чим ми займаємося -->
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li><img src="./images/doing-1.jpg" alt="Хтось пише код" /></li>
+          <li>
+            <img src="./images/doing-2.jpg" alt="Хтось звіряється з ескізом, тримаючи телефон" />
+          </li>
+          <li><img src="./images/doing-3.jpg" alt="Хтось тримає планшет обираючи колір" /></li>
+        </ul>
+      </section>
+      <!-- Наша команда -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/team-2.jpg" alt="Ольга Рєпіна" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team-3.jpg" alt="Микола Тарасов" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team-4.jpg" alt="Михайло Єрмаков" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <!-- Підвал -->
     <footer>
       <a href="">WebStudio</a>
