Додав атрибут у тег button
Створив атрибут type зі значенням button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Ефективні рішення для вашого бізнесу -->
       <section>
         <h1>Ефективні рішення для<br />вашого бізнесу</h1>
-        <button>Замовити послугу</button>
+        <button type="button">Замовити послугу</button>
       </section>
       <!-- Переваги -->
       <section>
