Змінив назву секції "Переваги" на "Особливості"

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <h1>Ефективні рішення для<br />вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
-      <!-- Переваги -->
+      <!-- Особливості -->
       <section>
-        <!-- <h2>Переваги</h2> -->
+        <!-- <h2>Особливості</h2> -->
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
