Додав відповідний артибут ширини усім зображенням

--- a/index.html
+++ b/index.html
@@ -55,11 +55,17 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="./images/doing-1.jpg" alt="Хтось пише код" /></li>
+          <li><img src="./images/doing-1.jpg" alt="Хтось пише код" width="370" /></li>
           <li>
-            <img src="./images/doing-2.jpg" alt="Хтось звіряється з ескізом, тримаючи телефон" />
+            <img
+              src="./images/doing-2.jpg"
+              alt="Хтось звіряється з ескізом, тримаючи телефон"
+              width="370"
+            />
           </li>
-          <li><img src="./images/doing-3.jpg" alt="Хтось тримає планшет обираючи колір" /></li>
+          <li>
+            <img src="./images/doing-3.jpg" alt="Хтось тримає планшет обираючи колір" width="370" />
+          </li>
         </ul>
       </section>
       <!-- Наша команда -->
@@ -67,22 +73,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" />
+            <img src="./images/team-1.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/team-2.jpg" alt="Ольга Рєпіна" />
+            <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team-3.jpg" alt="Микола Тарасов" />
+            <img src="./images/team-3.jpg" alt="Микола Тарасов" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/team-4.jpg" alt="Михайло Єрмаков" />
+            <img src="./images/team-4.jpg" alt="Михайло Єрмаков" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
