--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
       <!-- Особливості -->
       <section>
-        <!-- <h2>Особливості</h2> -->
+        <h2>Особливості</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
