--- a/index.html
+++ b/index.html
@@ -98,11 +98,14 @@
     <!-- Підвал -->
     <footer>
       <a href="">WebStudio</a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
-      <ul>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      <address>
+        <a
+          href="https://www.google.com.ua/maps/search/м.+київ+пр-т+лесі+українки+26/@50.4266707,30.5363676,17z/data=!3m1!4b1?hl=uk"
+          >м. Київ, пр-т Лесі Українки, 26</a
+        >
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
