--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
@@ -97,7 +97,7 @@
     </main>
     <!-- Підвал -->
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
